--- a/schedumator_app/app/assets/stylesheets/schedule.css.scss
+++ b/schedumator_app/app/assets/stylesheets/schedule.css.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Schedule controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+	font-family: "Helvetica";
+	font-weight: 100;
+	color: #222;
+}
